--- a/tex/anexos.tex
+++ b/tex/anexos.tex
@@ -87,7 +87,7 @@ Os dez artigos estudados foram obtidos após buscas no \textit{Google Scholar}, 
 
 %\label{tab:6}
 \end{longtable}
-\fonte{(Autor, 2019).}
+\legend{\textbf{Fonte: } (Autor, 2019).}
 \end{center}
 
 
