--- a/tex/introducao.tex
+++ b/tex/introducao.tex
@@ -11,13 +11,13 @@ Neste contexto, destaca-se a visão computacional, subárea da Inteligência Art
 
 \section{Motivação}
 
-O trabalho proposto possui potencial para beneficiar a comercialização da manga ao viabilizar a automatização de processos manuais. Assim, a determinação da qualidade das frutas torna-se mais rápida, econômica e consistente (DONIS-GONZÁLEZ et al., 2013). Como a obtenção do teor de sólidos solúveis não exigirá a destruição das amostras, produtoras \textcolor{red}{e/ou consumidores} de mangas não teriam mais o prejuízo do descarte, além de poderem proporcionar ao mercado consumidor um produto com qualidade assegurada. 
+O trabalho proposto possui potencial para beneficiar a comercialização da manga ao viabilizar a automatização de processos manuais. Assim, a determinação da qualidade das frutas torna-se mais rápida, econômica e consistente (DONIS-GONZÁLEZ et al., 2013). Como a obtenção do teor de sólidos solúveis não exige a destruição das amostras, produtoras \textcolor{red}{e/ou consumidores} de mangas não teriam mais o prejuízo do descarte, além de poderem proporcionar ao mercado consumidor um produto com qualidade assegurada. 
 
 \section{Definição do Problema}
 
-Para a obtenção de uma informação desejada a partir de uma imagem, é necessário cumprir uma sequência de etapas que se inicia na aquisição das imagens das amostras. Segundo Esquef (2002), após a aquisição é realizado o pré-processamento das imagens. Esta etapa é fundamental em um sistema de visão computacional, sendo necessária para remover informações indesejadas, realçar ou atenuar algumas das partes da imagem. Após ser realizado o pré-processamento, é aplicada a segmentação, para que a imagem seja dividida em partes disjuntas, visando sua simplificação (JOSEPH; SINGH, 2014). No contexto deste trabalho, a única região de interesse é a manga; assim, as imagens serão segmentadas visando a separação entre a fruta e o plano de fundo. A penúltima etapa realizada é a extração de atributos, em que para cada imagem é obtido um conjunto de características que a define. Por fim, estes atributos de cada imagem são relacionados ao atributo desejado através de um modelo preditivo.
+Para a obtenção de uma informação desejada a partir de uma imagem, é necessário cumprir uma sequência de etapas que se inicia na aquisição das imagens das amostras. Segundo Esquef (2002), após a aquisição é realizado o pré-processamento das imagens. Esta etapa é fundamental em um sistema de visão computacional, sendo necessária para remover informações indesejadas, realçar ou atenuar algumas das partes da imagem. Após ser realizado o pré-processamento, é aplicada a segmentação, para que a imagem seja dividida em partes disjuntas, visando sua simplificação (JOSEPH; SINGH, 2014). No contexto deste trabalho, a única região de interesse é a manga; assim, as imagens foram segmentadas visando a separação entre a fruta e o plano de fundo. A penúltima etapa realizada foi a extração de atributos, em que para cada imagem é obtido um conjunto de características que a define. Por fim, estes atributos de cada imagem foram relacionados ao atributo desejado através de um modelo preditivo.
 
-Entretanto, a escolha de técnicas de pré-processamento de imagens e atributos empregados não é realizada de forma trivial e depende da natureza do problema. Logo, para a construção de um bom modelo preditivo de sólidos solúveis totais (SST), diferentes técnicas de pré-processamento serão testadas e, para a determinação dos atributos mais significativos, um estudo investigativo sobre elas será conduzido. Por fim, a relação entre os atributos e o SST deverá ser modelada através de uma Regressão linear e Random Forest, cujos desempenhos serão avaliados através de métricas apropriadas. Assim, através deste estudo se buscará um profundo entendimento entre os aspectos visuais da manga e sua doçura. 
+Entretanto, a escolha de técnicas de pré-processamento de imagens e atributos empregados não é realizada de forma trivial e depende da natureza do problema. Logo, para a construção de um bom modelo preditivo de sólidos solúveis totais (SST), diferentes técnicas de pré-processamento foram testadas e, para a determinação dos atributos mais significativos, um estudo investigativo sobre elas foi conduzido. Por fim, a relação entre os atributos e o SST deverá fiu modelada através de uma Regressão linear e Random Forest, cujos desempenhos foram avaliados através de métricas apropriadas. Assim, através deste estudo se buscou um profundo entendimento entre os aspectos visuais da manga e sua doçura. 
 
 \section{Objetivos}
 
@@ -34,4 +34,4 @@ O objetivo geral do trabalho consiste na identificação de quais atributos de u
 
 \section{Organização do trabalho}
 
-O trabalho possui, além da Introdução, os capítulos de Fundamentação e Estudo Investigativo. Na fundamentação é discorrido sobre todos os tópicos necessários para o entendimento do trabalho e os artigos selecionados para o estudo. No último capítulo, é explicada a metodologia a ser aplicada, desde a coleta das mangas até a construção dos modelos preditivos, assim como o cronograma para o TCC II.
+O trabalho possui, além da Introdução, os capítulos de Fundamentação teórica, Materiais e métodos, Resultados e Conclusão. Na fundamentação é discorrido sobre todos os tópicos necessários para o entendimento do trabalho e os artigos selecionados para o estudo. No capítulo de materiais e métodos, é explicada a metodologia a ser aplicada, desde a coleta das mangas até a construção dos modelos preditivos. Os resultados obtidos no trabalho são mostrados no capítulo seguinte e, por fim, no último capítulo é feita uma conclusão sobre o estudo conduzido, assim como potenciais trabalhos futuros.
