--- a/tex/pretextual.tex
+++ b/tex/pretextual.tex
@@ -184,7 +184,7 @@
 
 Um dos atributos mais significativos para a garantia da qualidade de uma fruta é a quantidade de açúcares nela contida. Entretanto, para a obtenção deste valor, é exigida a destruição da amostra, de forma que seu conteúdo seja analisado. Essa abordagem, além de destrutiva, é onerosa; assim, o emprego de um sistema de visão computacional para previsão desta variável de saída mostra-se vantajoso. Entretanto, é necessário definir as variáveis visuais da fruta a partir das quais o teor de sólidos solúveis será obtido. Assim, será conduzido um estudo baseado em diferentes artigos onde é empregado o processamento de imagens para predição de atributos de qualidade. A fruta a ser analisada é a manga, das variedades ‘Tommy Atkins’ e ‘Palmer’, por ser produzida em abundância no Vale do São Francisco e por contribuir para a economia de Juazeiro (BA) e Petrolina (PE) através de sua exportação. As melhores técnicas de pré-processamento e inferência também serão avaliadas, de forma a obter a melhor abordagem para predição de sólidos solúveis em manga. 
 
- \textbf{Palavras-chave}: Maturação da manga. Visão computacional. \textit{Random Forest}.
+ \textbf{Palavras-chave}: Sólidos solúveis totais. Visão computacional. \textit{Random Forest}.
 
 \end{resumo}
 
@@ -197,7 +197,7 @@ One of the most significant attributes for guaranteeing the quality of a fruit i
 	\vspace{\onelineskip}
 
 	\noindent
-	\textbf{Key-words}: \textit{Mango ripening. Computer vision. Random Forest}.
+	\textbf{Key-words}: \textit{Total soluble solids. Computer vision. Random Forest}.
 
 \end{otherlanguage*}
 \end{resumo}
