--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 % ---------------------------------------------------------------------------
 % IDENTIFICAÇÃO
 % ---------------------------------------------------------------------------
-\titulo{DETERMINAÇÃO DE ATRIBUTOS DE QUALIDADE EM MANGAS ATRAVÉS DE PROCESSAMENTO DIGITAL DE IMAGENS}
+\titulo{DETERMINAÇÃO DE SÓLIDOS SOLÚVEIS TOTAIS EM MANGAS ATRAVÉS DE PROCESSAMENTO DIGITAL DE IMAGENS}
 \autor{DANIELE SILVA REIS}
 \local{JUAZEIRO - BA}
 \orientador{Prof. Dr. Rosalvo Ferreira de Oliveira Neto}
@@ -71,9 +71,10 @@ CURSO DE GRADUAÇÃO EM ENGENHARIA DE COMPUTAÇÃO}
 		\input{tex/metodos}
 		\input{tex/resultados}
 		\input{tex/conclusao}
+		\input{tex/refs}
 
 	\postextual
-		\bibliography{tex/references}
+		% \bibliography{tex/references}
 		\input{tex/anexos}
 
 \end{document}
